2003-04-23  Dan Dennedy <dan@dennedy.org>
    * libplug1394: updated for changes in libraw1394 ARM
    * librom1394: added error handling around the processing of sub directories.
    * dvcont.c: keep looking for AV/C node if reading a configROM directory fails
      (minimal configROMs on some hubs).
    * added test/mkrfc2734.c to set ConfigROM for use with eth1394--needs testing.

2002-10-30  Dan Dennedy
 	* added librom1394 manipulation functions.
	* added test/setrom.c as example of using above.
	* added functions to libavc1394 for target mode applications.
	* added test/avc_vcr.c as example of an AV/C target. 

2002-10-22  Dan Dennedy
	* added libplug1394/*
	* added test/plugctl.c
	* README: updated with librom1394 and libplug1394 info.

2002-10-01  Dan Dennedy <dan@dennedy.org>
	* common/raw1394util.c: convert from usleep to nanosleep
	
2002-09-26  Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c: remove test for STABLE response from avc transactions.
	* avc1394_simple.c: convert usleep to nanosleep.
	* dvcont.1, dvcont.c: apply patch from Daniel Kobras for updated docs.
	* dvcont.c: fix include

2002-09-25  Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c: added timeout support to avc transactions.
	* avc1394_vcr.c: added avc1394_vcr_seek_timecode(), but discovered
	  it is not supported by most devices.
	* dvcont.c: added seek command to test above, display usage if no
	  commands entered, added hidden pluginfo command for playing around,
	  added more verbose output.
	* configure.in: bump version.
	* dvcont.c: fixup version numbers.

2002-04-04  Dan Dennedy <dan@dennedy.org>
    * Applied patch from Kirk Bateman to handle unicode US_ENGLISH
      (Microsoft specific?) textual leaves in librom1394. Thanks!

2001-09-22  Dan Dennedy <dan@dennedy.org>
    * test/Makefile.am: tidy up
    * libavc1394/avc1394_internal.h: added defines for DEBUG and AVC1394_SLEEP
    * libavc1394/avc1394_simple.c: slight cleanup and conditional debug